--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Buyer/BuyersIndex.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Buyer/BuyersIndex.razor
@@ -1,5 +1,7 @@
-﻿@page "/buyers"
+﻿@attribute [Authorize]
+@page "/buyers"
 @attribute [StreamRendering]
+@using Microsoft.AspNetCore.Authorization
 @using WebRifa.Blazor.BlazorServices
 @using WebRifa.Blazor.Core.Dtos
 @inject IBuyerBlazorService _buyerService
