--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Layout/NavMenu.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Layout/NavMenu.razor
@@ -18,29 +18,31 @@
             </NavLink>
         </div>
 
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="raffles">
-                <span class="" aria-hidden="true"></span> Rifas
-            </NavLink>
-        </div>
+        <AuthorizeView>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="raffles">
+                    <span class="" aria-hidden="true"></span> Rifas
+                </NavLink>
+            </div>
 
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="buyers">
-                <span class="" aria-hidden="true"></span> Compradores
-            </NavLink>
-        </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="buyers">
+                    <span class="" aria-hidden="true"></span> Compradores
+                </NavLink>
+            </div>
 
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="tickets">
-                <span class="" aria-hidden="true"></span> Bilhetes
-            </NavLink>
-        </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="tickets">
+                    <span class="" aria-hidden="true"></span> Bilhetes
+                </NavLink>
+            </div>
 
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="auth">
-                <span class="bi bi-lock-nav-menu" aria-hidden="true"></span> Auth Required
-            </NavLink>
-        </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="auth">
+                    <span class="bi bi-lock-nav-menu" aria-hidden="true"></span> Auth Required
+                </NavLink>
+            </div>
+        </AuthorizeView>
 
         <AuthorizeView>
             <Authorized>
