--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Buyer/BuyersIndex.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Buyer/BuyersIndex.razor
@@ -1,7 +1,6 @@
-﻿@attribute [Authorize]
-@page "/buyers"
+﻿@page "/buyers"
 @attribute [StreamRendering]
-@using Microsoft.AspNetCore.Authorization
+@attribute [Authorize]
 @using WebRifa.Blazor.BlazorServices
 @using WebRifa.Blazor.Core.Dtos
 @inject IBuyerBlazorService _buyerService
