--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Raffles/RaffleAddEdit.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Raffles/RaffleAddEdit.razor
@@ -1,5 +1,6 @@
 ﻿@page "/raffle"
 @page "/raffle/{Id}"
+@attribute [Authorize]
 @rendermode InteractiveServer
 @using WebRifa.Blazor.BlazorServices
 @using WebRifa.Blazor.Core.Dtos
