--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Layout/NavMenu.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Layout/NavMenu.razor
@@ -32,8 +32,8 @@
             </div>
 
             <div class="nav-item px-3">
-                <NavLink class="nav-link" href="tickets">
-                    <span class="" aria-hidden="true"></span> Bilhetes
+                <NavLink class="nav-link" href="buy-tickets">
+                    <span class="" aria-hidden="true"></span> Compra de Bilhetes
                 </NavLink>
             </div>
 
