--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Layout/NavMenu.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Layout/NavMenu.razor
@@ -38,6 +38,12 @@
             </div>
 
             <div class="nav-item px-3">
+                <NavLink class="nav-link" href="receipts">
+                    <span class="" aria-hidden="true"></span> Recibos
+                </NavLink>
+            </div>
+
+            <div class="nav-item px-3">
                 <NavLink class="nav-link" href="auth">
                     <span class="bi bi-lock-nav-menu" aria-hidden="true"></span> Auth Required
                 </NavLink>
