--- a/WebRifa.Blazor/WebRifa.Blazor/Components/App.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/App.razor
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="WebRifa.Blazor.styles.css" />
+    <link rel="stylesheet" href="./sweetalert2/sweetalert2.min.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <HeadOutlet />
 </head>
@@ -15,6 +16,8 @@
 <body>
     <Routes />
     <script src="_framework/blazor.web.js"></script>
+    <script src="./sweetalert2/sweetalert2.all.min.js"></script>
+    <script src="./webrifa.sweetalert.js"></script>
 </body>
 
 </html>
