--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Receipts/ReceiptsIndex.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Receipts/ReceiptsIndex.razor
@@ -3,6 +3,7 @@
 @rendermode InteractiveServer
 @attribute [Authorize]
 @inject IReceiptBlazorService receiptService
+@inject IJSRuntime JS
 
 <h3>Recibos</h3>
 
