--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Receipts/ReceiptDetail.razor.css
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Receipts/ReceiptDetail.razor.css
@@ -2,23 +2,42 @@
     width: 300px;
     border: 2px solid #ccc;
     border-radius: 5px;
-    padding: 20px;
+    padding: 10px;
     margin: 20px auto;
     font-family: Arial, sans-serif;
 }
 
 .header {
-    text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
+    background-color: #d2b3ff;
+    height: 4em;
+    border-radius: 5px;
 }
 
     .header h2 {
+        text-align: center;
         margin: 0;
         color: #333;
+        position: relative;
+        top: 50%;
+        transform: translateY(-50%);
     }
 
 .content p {
-    margin-bottom: 10px;
+    margin: 5px 0 5px 0;
+    display: block;
+    width: 100%;
+    text-align: center;
+}
+
+.content span {
+    display: block;
+    text-align: center;
+}
+
+.content .field {
+    background-color: #eee;
+    border-radius: 5px;
 }
 
     .content p strong {
@@ -34,3 +53,22 @@
         width: 100px;
         height: 100px;
     }
+
+ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+}
+
+li {
+    list-style: none;
+    margin: 1em;
+    background-color: #eee;
+    margin: 5px;
+    padding: 5px;
+    width: 2em;
+    border-radius: 5px;
+    text-align: center;
+}
