--- a/WebRifa.Blazor/WebRifa.Blazor/Components/_Imports.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/_Imports.razor
@@ -11,3 +11,4 @@
 @using WebRifa.Blazor.Client
 @using WebRifa.Blazor.Components
 @using Microsoft.AspNetCore.Authorization
+@using WebRifa.Blazor.Helpers
