--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Receipts/ReceiptsIndex.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Receipts/ReceiptsIndex.razor
@@ -36,8 +36,19 @@ else {
                     <td>@receipt.BuyerName</td>
                     <td>@GetNumbersAsString(receipt)</td>
                     <td>
-                        <button @onclick=@(() => PopUp.ToggleVisibilityAsync())>Detalhes</button>
-                        <button @onclick="(() => DeleteReceiptAsync(receipt.Id))">Excluir Recibo</button>
+                        <button
+                            class="btn btn-info"
+                            @onclick=@(() => PopUp.ToggleVisibilityAsync())>
+                            
+                            Detalhes
+                        </button>
+                        
+                        <button 
+                            class="btn btn-danger" 
+                            @onclick="(() => DeleteReceiptAsync(receipt.Id))">
+                            
+                            Excluir Recibo
+                        </button>
                     </td>
                 </tr>
 
